deploy/manifest/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app
  labels:
    app: iotapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-app
  template:
    metadata:
      labels:
        app: api-app
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: api-app
          image: ghcr.io/button-inc/iot-system-prototype/api:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-app-service
spec:
  selector:
    app: api-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
