deploy/manifest/real-fake.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: real-fake
  labels:
    app: iotapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: real-fake
  template:
    metadata:
      labels:
        app: real-fake
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: real-fake
          image: ghcr.io/button-inc/iot-system-prototype/real_fake_sensors:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: real-fake-service
spec:
  selector:
    app: real-fake
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
