deploy/manifest/iot-system-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-ingress
spec:
  rules:
    - host: iot.local
      http:
        paths:
          - path: /sensors
            pathType: Prefix
            backend:
              service:
                name: api-app-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: custom-app-service
                port:
                  number: 3000
